[PURR][#2572]Fix the issue that additional doc link hidden behind download button (#1736)

--- a/core/components/com_publications/site/assets/css/publications.css
+++ b/core/components/com_publications/site/assets/css/publications.css
@@ -434,7 +434,6 @@ p.doi {
 	padding-bottom: 0.5em;
 }
 .viewalldocs {
-	margin-top: -1em;
 	font-size: 85%;
 	padding: 0 0 0.8em 30px;
 	background: url("../img/childlink.gif") 10px 0 no-repeat;
